--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+/*Variables*/
 :root{
     --desaturated-red:  hsl(0, 36%, 70%);
     --soft-red: hsl(0, 93%, 68%);
